--- a/Foods/src/scss/main.scss
+++ b/Foods/src/scss/main.scss
@@ -1,3 +1,6 @@
-body {
-  background-color: red;
-}
+@import "abstracts/variables";
+
+@import "base/base";
+@import "base/typography";
+
+@import "pages/home";
