--- a/Foods/src/scss/base/_typography.scss
+++ b/Foods/src/scss/base/_typography.scss
@@ -3,3 +3,13 @@ html {
   font-weight: 400;
   font-size: 62.5%;
 }
+
+.section-heading {
+  font-size: 12rem;
+  font-weight: 900;
+  color: $color--white;
+  text-align: center;
+  text-transform: capitalize;
+  letter-spacing: 0.5rem;
+  text-shadow: 0.3rem 0.3rem 0.3rem $color--black;
+}
