--- a/Foods/src/scss/pages/_home.scss
+++ b/Foods/src/scss/pages/_home.scss
@@ -1,3 +1,10 @@
 .section-variety-of-foods {
+  width: 100vw;
+  height: 100vh;
+  background-color: $color--black-1;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
