--- a/Foods/src/scss/pages/_home.scss
+++ b/Foods/src/scss/pages/_home.scss
@@ -1,5 +1,5 @@
 .section-variety-of-foods {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: $color--black-1;
 
@@ -7,4 +7,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.section-popular-foods {
+  width: 100%;
+  height: 100vh;
+  background-color: $color--black-1;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  padding: 10rem 0;
+
+  .cards-container {
+    display: flex;
+    justify-content: space-evenly;
+  }
 }
